--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 body {
   background-color: #707070;
+  overflow: hidden;
 }
 /* MonsterGame.module.css */
 .game-container {
@@ -16,4 +17,20 @@ body {
   top: 20px;
   left: 50%;
   transform: translateX(-50%);
+}
+
+.openModalButton {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: white;
+  font-size: 16px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s ease-in-out;
 }
