--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,16 @@
 body {
-  background-color: #707070;
+  background: 
+  radial-gradient(circle at center, rgba(255, 255, 255, 0.1) 0%, rgba(0, 0, 0, 0.8) 70%),
+  linear-gradient(to bottom, #333, #000),
+  repeating-linear-gradient(
+    -45deg,
+    transparent,
+    transparent 10px,
+    rgba(255, 255, 255, 0.05) 10px,
+    rgba(255, 255, 255, 0.05) 20px
+  );
+  color: #e0e0e0;
+  font-family: 'Courier New', Courier, monospace;
   overflow: hidden;
 }
 /* MonsterGame.module.css */
@@ -25,12 +36,12 @@ body {
   left: 50%;
   transform: translateX(-50%);
   padding: 10px 20px;
-  background-color: #007bff;
-  color: white;
+  background: linear-gradient(to right, #333, #666);
+  color: #e0e0e0;
   font-size: 16px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
   transition: background-color 0.3s ease-in-out;
 }
