--- a/src/components/monster/monster.css
+++ b/src/components/monster/monster.css
@@ -7,8 +7,10 @@
 
 /* Текст "Поиск..." */
 .respawnText {
+    font-family: 'Courier New', Courier, monospace;
     font-size: 24px;
-    color: #333;
+    color: #f5f5f5;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
     margin-bottom: 20px;
     transition: transform 0.5s ease-in-out; /* Плавная анимация масштаба */
   }
