--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,8 @@ body {
   -webkit-touch-callout: none;
   -webkit-tap-highlight-color: transparent;
 }
+
+img {
+  user-select: none; /* Запрет выделения */
+  pointer-events: none; /* Отключение событий мыши */
+}
