--- a/src/index.css
+++ b/src/index.css
@@ -3,4 +3,6 @@ body {
   user-select: none;
   -webkit-touch-callout: none;
   -webkit-tap-highlight-color: transparent;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
