--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 body {
-  color: #e0e0e0;
-  font-family: 'Courier New', Courier, monospace;
-  overflow: hidden;
+  color: #000000;
+  font-family: 'Times New Roman', Times, serif;
 }
