--- a/src/components/mainApp/mainApp.module.css
+++ b/src/components/mainApp/mainApp.module.css
@@ -2,12 +2,11 @@
 .appContainer {
     display: flex;
     flex-direction: column;
-    max-height: 100vh;
+    height: 100vh;
   }
   
   .mainContent {
     flex: 1; /* Занимает оставшееся пространство */
-    background-color: #f9f9f9;
     border-radius: 15px;
     margin-top: 10px;
   }
